Updated Mailer with Certificate Support

--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -29,7 +29,7 @@
                                             style="border-width:0px 8px;border-style:solid;border-color:rgb(255,153,0);padding:0px 0px 0px; background-color: black;">
                                             <div style="line-height:15.6px;padding:10px">
                                                 <div style="line-height:14px">
-                                                    <img src="https://i.imgur.com/mBB062L.png"
+                                                    <img src="https://i.imgur.com/l10uX0A.png"
                                                         style="width:100%;height:auto;max-width:650px;outline:none;text-decoration:none;display:block;">
                                                 </div>
                                             </div>
@@ -51,7 +51,7 @@
                                                 <div style="line-height:14px">
                                                     <p style="line-height:16px;margin:0px"><span
                                                             style="color:rgb(255, 255, 255);font-size:16px">
-                                                            <font face="verdana, sans-serif"><b>👋 Hey {{ data.fullname }}!</b></font>
+                                                            <font face="verdana, sans-serif"><b>👋 Hey {{ data.name }}!</b></font>
                                                         </span></p>
                                                 </div>
                                             </div>
@@ -71,7 +71,7 @@
                                             style="border-width:0px 8px;border-style:solid;border-color:rgb(255,153,0);padding:25px 0px 0px">
                                             <div align="center" style="padding-right:0px;padding-left:0px"><img
                                                     align="center" border="0"
-                                                    src="https://i.imgur.com/abHrSrF.png"
+                                                    src="https://ci4.googleusercontent.com/proxy/5DzZBAAWTWUPpcihy_Ps34RhDCazv3G5E1FgKO3xZ1gky80E8DzyHPhWfOtHFcSnX1eXeBogkCwi9D1iFh1O-KJOul_P32zcIDh3QDmbbLyFlrFjhLy1p7dDSd1VCwHITonnIQ9tj1uUcBjrXJ8BxOxe80F5UOlC34kNry2pgBg4eaE19EB2aQ9b=s0-d-e1-ft#https://d15k2d11r6t6rl.cloudfront.net/public/users/Integrators/BeeProAgency/53601_111631/Personal%20message/divider.png"
                                                     alt="Image" title="Image" width="634"
                                                     style="outline:none;clear:both;border:0px;height:auto;float:none;width:484px;max-width:634px;display:block"
                                                     class="CToWUd" data-bit="iit"></div>
@@ -121,7 +121,7 @@
                                                         <u>EVENT PASS</u></b><br>
                                                         <figure>
                                                             <div style="width:100%;display:flex;justify-content:center;align-items:center;">
-                                                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{data.registration | urlencode}}%2C{{data.fullname | urlencode}} "
+                                                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{data.regno | urlencode}}%2C{{data.name | urlencode}} "
                                                                     alt="Event Pass" title="Event Pass"
                                                                     style="outline:none;clear:both;border:0px;height:auto;float:none;width:150px;max-width:150px;display:block"
                                                                     class="CToWUd" data-bit="iit">
