Updated QR Format

--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -121,7 +121,7 @@
                                                         <u>EVENT PASS</u></b><br>
                                                         <figure>
                                                             <div style="width:100%;display:flex;justify-content:center;align-items:center;">
-                                                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{data.regno | urlencode}}%2C{{data.name | urlencode}} "
+                                                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{data.regno | urlencode}}%2C{{data.name | urlencode}}%2C{{data.email | urlencode}}"
                                                                     alt="Event Pass" title="Event Pass"
                                                                     style="outline:none;clear:both;border:0px;height:auto;float:none;width:150px;max-width:150px;display:block"
                                                                     class="CToWUd" data-bit="iit">
